# pakfire

./: .gitignore  Dockerfile.in  I18N  INSTALL  MANIFEST.in  Makeconfig  Makefile  Makefile.am  README  TODO  configure.ac  runpychecker.sh  setup.py
.tx/: config
contrib/: pakfire.nm.in
contrib/config/: builder.conf  general.conf
contrib/config/distros/: ipfire3.conf
examples/: builder.conf  client.conf  daemon.conf  general.conf  pakfire-daemon.conf  pakfire.conf
examples/distros/: ipfire3.conf
examples/pakfire.repos.d/: ipfire.repo
examples/repos/: ipfire.repo
m4/: attributes.m4
macros/: arch.macro  build.macro  cflags.macro  constants.macro  package-default.macro  perl.macro  python.macro  quality-agent.macro  systemd.macro  templates.macro
pakfire/: __init__.py  actions.py  api.py  base.py  builder.py  chroot.py  cli.py  compress.py  config.py  constants.py  database.py  depsolve.py  distro.py  downloader.py  errors.py  i18n.py  index.py  logger.py  metadata.py  repository.py  satsolver.py  server.py  transaction.py  util.py
pakfire/plugins/: __init__.py  base.py
pakfire/repository/: __init__.py  base.py  cache.py  database.py  database_old.py  index.py  installed.py  local.py  local_old.py  metadata.py  oddments.py  remote.py  remote_old.py  solver.py  transaction.py
pakfire/server/: __init__.py  base.py  master.py  slave.py
po/: LINGUAS  Makefile  POTFILES.in  ar.po  ca.po  cs_CZ.po  da.po  de.po  de_DE.po  el_GR.po  es.po  fa.po  fr.po  hr.po  hu.po  id.po  it.po  ja.po  jv.po  km_KH.po  nl.po  pakfire.pot  pakfire.pot.orig  pakfire.pot.rej  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ro_RO.po  ru.po  rw.po  sk.po  sq.po  sr.po  su.po  sv.po  th.po  tk.po  tr.po  (+4 more)
python/: Makefile
python/pakfire/: __init__.py  actions.py  api.py  base.py  builder.py  cgroup.py  chroot.py  cli.py  compress.py  config.py  constants.py  daemon.py  distro.py  downloader.py  errors.py  filelist.py  i18n.py  keyring.py  logger.py  lzma.py  satsolver.py  server.py  system.py  transaction.py  transport.py  util.py
python/pakfire/client/: __init__.py  base.py  builder.py  test.py  transport.py
python/pakfire/repository/: __init__.py  base.py  cache.py  database.py  index.py  local.py  metadata.py  remote.py  system.py
python/src/: Makefile  _pakfiremodule.c  capabilities.c  capabilities.h  config.h  pool.c  pool.h  problem.c  relation.c  relation.h  repo.c  repo.h  request.c  solution.c  solution.h  solvable.c  solvable.h  solver.c  solver.h  step.c  transaction.c  util.c  util.h
scripts/: Makefile  chroot-shell  compress-man-pages  dependency-tracker  extract-debuginfo  functions-files  pakfire  pakfire-build  pakfire-multicall.py  patch  perl.prov
scripts/quality-agent.d/: 001-include-files  001-remove-static-libs  003-libs-location  050-invalid-interpreters  050-relro  050-root-links-to-usr  090-remove-empty-dirs  qa-include
src/: _pakfiremodule.c  config.h  pool.c  pool.h  problem.c  problem.h  relation.c  relation.h  repo.c  repo.h  request.c  request.h  solution.c  solution.h  solvable.c  solvable.h  solver.c  solver.h  step.c  step.h  test.py  transaction.c  transaction.h  util.c  util.h
src/_lzma/: _lzmamodule.c
src/_pakfire/: _pakfiremodule.c  archive.c  archive.h  capabilities.c  capabilities.h  constants.h  errors.h  key.c  key.h  package.c  package.h  pakfire.c  pakfire.h  pool.c  pool.h  problem.c  problem.h  relation.c  relation.h  repo.c  repo.h  request.c  request.h  selector.c  selector.h  solution.c  solution.h  solvable.c  solvable.h  solver.c  solver.h  step.c  step.h  transaction.c  transaction.h  util.c  util.h
src/debugedit/: debugedit.c  rpmtag.h
src/libpakfire/: arch.c  archive.c  cache.c  db.c  errno.c  execute.c  file.c  filelist.c  filter.c  key.c  libpakfire.sym  logging.c  package.c  packagecache.c  packagelist.c  pakfire.c  parser.c  pool.c  problem.c  relation.c  relationlist.c  repo.c  repocache.c  request.c  scriptlet.c  selector.c  solution.c  solver.c  step.c  system.c  transaction.c  util.c
src/libpakfire/parser/: .gitignore  grammar.y  parser.c  scanner.l
src/pakfire/: __init__.py  __version__.py.in  actions.py  arch.py  base.py  builder.py  cgroup.py  cli.py  client.py  compress.py  config.py  constants.py  daemon.py  distro.py  downloader.py  downloaders.py  errors.py  filelist.py  http.py  hub.py  i18n.py  keyring.py  logger.py  progressbar.py  satsolver.py  server.py  shell.py  system.py  transaction.py  transport.py  util.py
src/pakfire/repository/: __init__.py  base.py  cache.py  database.py  index.py  local.py  metadata.py  remote.py  system.py
src/pakfire/ui/: __init__.py  base.py  cli.py  helpers.py  progressbar.py
src/quality-agent/: 001-remove-info-files  050-invalid-interpreters  050-libs-x86_64  095-directory-layout
src/scripts/: extract-debuginfo.in  find-common  find-prerequires  find-provides  find-requires  functions-constants  functions-files  pakfire  patch  py-compile  quality-agent.in  remove-static-libs
src/systemd/: pakfire-daemon.service.in
systemd/: pakfire-daemon.service
tests/: module-load.py  testsuite.c  testsuite.h
tests/data/: 726D8B0B0889B04E.key  beep-1.3-2.ip3.x86_64.pfm  kernel.nm
tests/libpakfire/: arch.c  archive.c  db.c  execute.c  key.c  key.h  main.c  makefile.c  pakfire.h  parser.c  util.c
tests/python/: cgroups.py  execute.py  test.py
tools/: Makefile  debugedit.c  dependency-tracker  find-provides  find-requires  functions-files  functions-logging  functions-packager-find  pakfire-multicall.py  perl.req  py-compile  quality-agent
tools/buildsystem-tools/: cleanup  functions-common  functions-constants  functions-directories  functions-files  functions-lists  functions-packager-find  pkg-config.prov  pkg-config.req  py-compile  stripper
tools/fake-environ/: Makefile
tools/quality-agent.d/: 003-libs-location  050-canary  050-invalid-interpreters  050-libs-x86_64  095-directory-layout
tools/quality-agent/quality-agent.d/: 001-remove-static-libs  001-unsafe-files  002-bad-symlinks  050-execstacks  050-libs-needed  050-libs-soname  050-nx  (+5 more)
(+35 files in other folders)
